--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>FCC Weather App</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBd7StUa3VDxdvf3egdidHbWdkU7QaxY4&libraries=places"></script>
   </head>
   <body>
     <div id="app"></div>
