--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>FCC Weather App</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBd7StUa3VDxdvf3egdidHbWdkU7QaxY4&libraries=places"></script>
+    <!-- <script src="https://rawgithub.com/darkskyapp/skycons/master/skycons.js"></script> -->
   </head>
   <body>
     <div id="app"></div>
