--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>FCC Weather App</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBBd7StUa3VDxdvf3egdidHbWdkU7QaxY4&libraries=places"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div id="app"></div>
